syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "user.proto";


option go_package = "github.com/dbracic21-foi/simplebank/pb";

message LoginRequest{
    string username = 1;
    string password = 2;

}
message LoginResponse {
    User user = 1;
    string SessionID = 2;
    string AccessToken = 3;
    string RefreshToken = 4; 
    google.protobuf.Timestamp AccessTokenExpiresAt = 5;
    google.protobuf.Timestamp RefreshTokenExpiresAt = 6;

   
     
}
